[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/file-editor/scripts/VanillaEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/file-editor/fonts/Roboto-Black.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[node name="VanillaEditor" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditor" type="TextEdit" parent="."]
margin_right = 1024.0
margin_bottom = 577.0
size_flags_vertical = 3
custom_colors/member_variable_color = Color( 0.737255, 0.882353, 1, 1 )
custom_colors/code_folding_color = Color( 1, 1, 1, 0.701961 )
custom_colors/function_color = Color( 0.341176, 0.701961, 1, 1 )
custom_colors/safe_line_number_color = Color( 0.8, 0.968627, 0.827451, 0.74902 )
custom_colors/symbol_color = Color( 0.670588, 0.788235, 1, 1 )
custom_colors/caret_background_color = Color( 0, 0, 0, 1 )
custom_colors/selection_color = Color( 0.411765, 0.611765, 0.909804, 0.34902 )
custom_colors/caret_color = Color( 1, 1, 1, 1 )
custom_colors/breakpoint_color = Color( 1, 0.470588, 0.419608, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/completion_font_color = Color( 1, 1, 1, 0.392157 )
custom_colors/completion_scroll_color = Color( 1, 1, 1, 0.0705882 )
custom_colors/background_color = Color( 0.121569, 0.145098, 0.192157, 1 )
custom_colors/number_color = Color( 0.631373, 1, 0.882353, 1 )
custom_colors/completion_background_color = Color( 0.196078, 0.231373, 0.309804, 1 )
custom_colors/brace_mismatch_color = Color( 1, 0.470588, 0.419608, 1 )
custom_colors/current_line_color = Color( 1, 1, 1, 0.0705882 )
custom_colors/completion_selected_color = Color( 1, 1, 1, 0.0705882 )
custom_colors/mark_color = Color( 1, 0.470588, 0.419608, 0.301961 )
custom_colors/word_highlighted_color = Color( 1, 1, 1, 0.392157 )
custom_colors/completion_existing_color = Color( 1, 1, 1, 0.392157 )
custom_constants/completion_lines = 20
custom_constants/completion_max_width = 20
custom_constants/completion_scroll_width = 20
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
breakpoint_gutter = true
highlight_all_occurrences = true
override_selected_font_color = true
smooth_scrolling = true
hiding_enabled = true
caret_blink = true
caret_blink_speed = 1.0
caret_moving_by_right_click = false

[node name="SearchBox" type="HBoxContainer" parent="."]
visible = false
margin_top = 525.0
margin_right = 1024.0
margin_bottom = 549.0

[node name="Label" type="Label" parent="SearchBox"]
margin_top = 5.0
margin_right = 46.0
margin_bottom = 19.0
text = "Search:"

[node name="LineEdit" type="LineEdit" parent="SearchBox"]
margin_left = 50.0
margin_right = 778.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="matchcase" type="CheckBox" parent="SearchBox"]
margin_left = 782.0
margin_right = 883.0
margin_bottom = 24.0
text = "Match Case"

[node name="wholewords" type="CheckBox" parent="SearchBox"]
margin_left = 887.0
margin_right = 1001.0
margin_bottom = 24.0
text = "Whole Words"

[node name="close" type="Button" parent="SearchBox"]
margin_left = 1005.0
margin_right = 1024.0
margin_bottom = 24.0
text = "x"
flat = true

[node name="ReplaceBox" type="HBoxContainer" parent="."]
visible = false
margin_top = 553.0
margin_right = 1024.0
margin_bottom = 577.0

[node name="Label" type="Label" parent="ReplaceBox"]
margin_top = 5.0
margin_right = 54.0
margin_bottom = 19.0
text = "Replace:"

[node name="replace" type="LineEdit" parent="ReplaceBox"]
margin_left = 58.0
margin_right = 475.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="ReplaceBox"]
margin_left = 479.0
margin_top = 5.0
margin_right = 513.0
margin_bottom = 19.0
text = "With:"

[node name="with" type="LineEdit" parent="ReplaceBox"]
margin_left = 517.0
margin_right = 934.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ReplaceBox"]
margin_left = 938.0
margin_right = 1000.0
margin_bottom = 24.0
text = "Replace"

[node name="close2" type="Button" parent="ReplaceBox"]
margin_left = 1004.0
margin_right = 1023.0
margin_bottom = 24.0
text = "x"
flat = true

[node name="FileInfo" type="HBoxContainer" parent="."]
margin_top = 581.0
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 2
alignment = 1

[node name="lastmodified_icon" type="TextureRect" parent="FileInfo"]
margin_bottom = 19.0
stretch_mode = 4

[node name="Label" type="Label" parent="FileInfo"]
margin_left = 2.0
margin_top = 2.0
margin_right = 127.0
margin_bottom = 16.0
text = "Last modified time:"

[node name="lastmodified" type="Label" parent="FileInfo"]
margin_left = 129.0
margin_top = 2.0
margin_right = 129.0
margin_bottom = 16.0

[node name="Label2" type="Label" parent="FileInfo"]
margin_left = 131.0
margin_top = 2.0
margin_right = 427.0
margin_bottom = 16.0
size_flags_horizontal = 15
text = "Characters counter:"
align = 2

[node name="c_counter" type="Label" parent="FileInfo"]
margin_left = 429.0
margin_top = 2.0
margin_right = 429.0
margin_bottom = 16.0
size_flags_horizontal = 2

[node name="Readonly" type="CheckBox" parent="FileInfo"]
margin_left = 945.0
margin_right = 1024.0
margin_bottom = 19.0
size_flags_horizontal = 10
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/hover_pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.145098, 0.172549, 0.231373, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Can Edit"
flat = true
[connection signal="text_changed" from="TextEditor" to="." method="_on_TextEditor_text_changed"]
[connection signal="focus_entered" from="SearchBox/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="text_changed" from="SearchBox/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="SearchBox/matchcase" to="." method="_on_matchcase_toggled"]
[connection signal="toggled" from="SearchBox/wholewords" to="." method="_on_wholewords_toggled"]
[connection signal="pressed" from="SearchBox/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="ReplaceBox/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ReplaceBox/close2" to="." method="_on_close2_pressed"]
